--- a/cv.css
+++ b/cv.css
@@ -65,7 +65,7 @@ body {
 
 .titleTable {
     border-collapse: collapse;
-    border-spacing: 0;
+    border-spacing: 20;
     width: 100%;
     border: 1px solid #ddd;
     color: blue;
@@ -82,6 +82,8 @@ body {
 
 .titleTable #myId {
     width: 80%;
+    padding: 10px;
+    font-size: 2VW;
 }
 
 
