--- a/cv.css
+++ b/cv.css
@@ -35,6 +35,7 @@ body {
     padding: 0%;
     border: 1px solid red;
     text-align: left;
+    font-size: 2VW;
 }
 
 
@@ -42,7 +43,7 @@ body {
     color: red;
     font-weight: bold;
     /* font-size: 40px; */
-    font-size: 2VW;
+    /* font-size: 2VW; */
     padding: 10px;
     border-width: 3px;
     border-color: green;
