--- a/cv.css
+++ b/cv.css
@@ -2,10 +2,10 @@
 /* #id */
 /* .class */
 
-
+/* pc */
 body {
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     font-family: "Times New Roman", Times, serif;
     border: 0px solid blue;
     padding: 1%;
@@ -14,38 +14,32 @@ body {
     font-size:25px;
 }
 
-  
-  /* On screens that are 992px wide or less, the background color is blue */ 
-  /*992px*/
-  @media screen and (max-width: 1500px) {
-    body {
-      background-color: blue;
-      color: white;
-      font-size:20px;
-    }
-  }
-  
-  /* On screens that are 600px wide or less, the background color is olive */
 
-  @media screen and (max-width: 600px) {
-    body {
-      background-color: black;
-      color: white;
-      font-size:15px;
-    }
-
-
-
-/* font size */
-/* .fontNormal {
-    font-size: 40px;
-} */
-
-#wrapper {
+body#wrapper {
     padding: 2%;
 }
 
-.titleResume {
+
+body#toolbar {
+    padding: 0%;
+    border: 0px solid red;
+    text-align: left;
+    /* font-size: 3VW; */
+    /* font-size: 40px; */
+}
+
+/*temp*/
+body#showTime {
+    font-weight: bold;
+    padding: 10px;
+    border-width: 0px;
+    border-color: green;
+    color: rgb(196, 196, 63);
+    text-shadow: 5px 2px 3px rgb(77, 177, 77);
+}
+
+
+body.titleResume {
     padding: 0%;
     border: 0px solid green;
     text-align: center;
@@ -59,43 +53,22 @@ body {
 
 }
 
-#toolbar {
-    padding: 0%;
-    border: 0px solid red;
-    text-align: left;
-    /* font-size: 3VW; */
-    /* font-size: 40px; */
-}
 
 
-#showTime {
-    color: red;
-    font-weight: bold;
-    /* font-size: 40px; */
-    /* font-size: 2VW; */
-    padding: 10px;
-    border-width: 0px;
-    border-color: green;
-    color: rgb(196, 196, 63);
-    text-shadow: 5px 2px 3px rgb(77, 177, 77);
-
-}
-
-
-.responsiveTitle {
+body.responsiveTitle {
     border: 0px solid red;
     width: auto;
 }
 
 
 
-.testClass {
+body.testClass {
     border: 0px solid red;
     width: auto;
 }
 
 
-.titleTable {
+body.titleTable {
     border-collapse: collapse;
     border-spacing: 20;
     width: 100%;
@@ -103,39 +76,65 @@ body {
     color: blue;
 }
 
-.titleTable #myPic {
+body.titleTable #myPic {
     align-content: center;
     width: 20%;
 }
 
-.autoSize {
+body.autoSize {
     width: auto;
 }
 
-.titleTable #myId {
+body.titleTable #myId {
     width: 80%;
     padding: 10px;
     /* font-size: 3VW; */
 }
 
 
-.thick-green-border {
+ /* .thick-green-border {
     border-color: white;
     border-width: 10px;
     border-style: solid;
-    border-radius: 30px;
+    border-radius: 30px; */
     /*square - using "%"*/
-}
+/* }  */
 
-/* table {
-  } */
 
-/* th, td {
-    text-align: left;
-    padding: 8px;
-  } */
+/*
+* 2 more sizes 
+*/
 
-/* tr:nth-child(even){background-color: #f2f2f2} */
+  /* tablet */
+  /* On screens that are 992px wide or less, the background color is blue */ 
+  /*992px*/
+  @media screen and (max-width: 1500px) {
+    body {
+      background-color: blue;
+      color: white;
+      font-size:20px;
+    }
+  }
+  
+  /* On screens that are 600px wide or less, the background color is olive */
+/* phone */
+  @media screen and (max-width: 600px) {
+    body {
+      background-color: black;
+      /* color: white; */
+      font-size:15px;
+    }
+
+    #toolbar {
+        padding: 0%;
+        border: 0px solid red;
+        text-align: left;
+        color: red;
+        /* font-size: 3VW; */
+        /* font-size: 40px; */
+    }
+  }
+
 
 
 /* wtf */
