--- a/cv.pc.css
+++ b/cv.pc.css
@@ -30,7 +30,7 @@ wrapper {
 }
 
 #showTime {
-    color: green;
+    color: lightblue;
     font-weight: bold;
     font-style: italic;
     padding: 10px;
