--- a/cv.phone.css
+++ b/cv.phone.css
@@ -22,7 +22,7 @@
     }
 
     #showTime {
-        color: red;
+        color: white;
         font-weight: bold;
         font-style: italic;
         padding: 10px;
@@ -32,5 +32,49 @@
         /* color: rgb(26, 76, 212);
         text-shadow: 4px 2px 3px rgb(161, 180, 233); */
     }
+
+    .titleResume {
+        padding: 0%;
+        border: 0px solid green;
+        text-align: center;
+
+        font-weight: bold;
+        /* font-size: 40px; */
+        border-width: 0px;
+        /* border-color: green; */
+        /* color: rgb(24, 143, 223); */
+        /* text-shadow: 5px 2px 3px rgb(77, 177, 77); */
+        color: green;
+    }
+
+    .responsiveTitle {
+        border: 0px solid red;
+        width: auto;
+    }
+    
+
+.titleTable {
+    border-collapse: collapse;
+    border-spacing: 20;
+    width: 100%;
+    border: 0px solid #ddd;
+    color: white;
+}
+
+.titleTable #myPic {
+    align-content: center;
+    width: 20%;
+}
+
+.autoSize {
+    width: auto;
+}
+
+.titleTable #myId {
+    width: 80%;
+    padding: 10px;
+    /* font-size: 3VW; */
+}
+
 
 }
