--- a/cv.tablet.css
+++ b/cv.tablet.css
@@ -3,7 +3,7 @@
 /* */
 @media screen and (max-width: 1500px) {
     body {
-        background-color: blue;
+        background-color: navy;
         color: white;
         font-size: 20px;
     }
