--- a/cv.pc.css
+++ b/cv.pc.css
@@ -4,8 +4,8 @@
 
 /* pc */
 body {
-    color: black;
-    background-color: white;
+    color: #3fc1c9; /*black;*/
+    background-color: #364f6b; /* white; */
     font-family: "Times New Roman", Times, serif;
     border: 0px solid blue;
     padding: 1%;
@@ -30,7 +30,7 @@ wrapper {
 }
 
 #showTime {
-    color: lightblue;
+    color: #f5f5f5;/*lightblue;*/
     font-weight: bold;
     font-style: italic;
     padding: 10px;
@@ -52,7 +52,7 @@ wrapper {
     /* border-color: green; */
     /* color: rgb(24, 143, 223); */
     /* text-shadow: 5px 2px 3px rgb(77, 177, 77); */
-    color: blue;
+    color: #fc5185; /*blue*/;
 
 }
 
@@ -76,7 +76,7 @@ testClass {
     border-spacing: 20;
     width: 100%;
     border: 0px solid #ddd;
-    color: blue;
+    color: #3fc1c9;/*blue;*/
 }
 
 .titleTable #myPic {
