--- a/cv.phone.css
+++ b/cv.phone.css
@@ -76,5 +76,13 @@
     /* font-size: 3VW; */
 }
 
+hr {
+    border-style: none;
+    border-top-style: dotted;
+    border-color: gray;
+    border-width: 6px;
+    width: 6%;  
+}
+
 
 }
