--- a/cv.pc.css
+++ b/cv.pc.css
@@ -8,8 +8,11 @@ body {
     background-color: #364f6b; /* white; */
     font-family: "Times New Roman", Times, serif;
     border: 0px solid blue;
-    padding: 1%;
+    /* padding: 1%; */
     width: auto;
+
+    margin: 0px;
+
     /* font-size: */
     font-size: 25px;
 }
@@ -26,14 +29,14 @@ wrapper {
     text-align: left;
     /* font-size: 3VW; */
     /* font-size: 40px; */
-    /* color: green; */
+    
 }
 
 #showTime {
     color: #f5f5f5;/*lightblue;*/
     font-weight: bold;
     font-style: italic;
-    padding: 10px;
+    padding: 0px; /*old value 10px*/
     border-width: 0px;
     /* border-color: green; */
     /* color: rgb(26, 76, 212);
@@ -80,7 +83,6 @@ testClass {
 }
 
 .titleTable #myPic {
-    align-content: center;
     width: 20%;
 }
 
