--- a/cv.pc.css
+++ b/cv.pc.css
@@ -1,27 +1,31 @@
 /* wtf */
+
+
 /* #id */
+
+
 /* .class */
 
+
 /* pc */
+
 body {
-    color: #3fc1c9; /*black;*/
-    background-color: #364f6b; /* white; */
+    color: #3fc1c9;
+    /*black;*/
+    background-color: #364f6b;
+    /* white; */
     font-family: "Times New Roman", Times, serif;
     border: 0px solid blue;
     /* padding: 1%; */
     width: auto;
-
     margin: 0px;
-
     /* font-size: */
     font-size: 25px;
 }
 
-
 wrapper {
     padding: 2%;
 }
-
 
 #toolbar {
     padding: 0%;
@@ -29,37 +33,35 @@ wrapper {
     text-align: left;
     /* font-size: 3VW; */
     /* font-size: 40px; */
-    
 }
 
 #showTime {
-    color: #f5f5f5;/*lightblue;*/
+    color: #f5f5f5;
+    /*lightblue;*/
     font-weight: bold;
     font-style: italic;
-    padding: 0px; /*old value 10px*/
+    padding: 0px;
+    /*old value 10px*/
     border-width: 0px;
     /* border-color: green; */
     /* color: rgb(26, 76, 212);
     text-shadow: 4px 2px 3px rgb(161, 180, 233); */
 }
 
-
 .titleResume {
     padding: 0%;
     border: 0px solid green;
     text-align: center;
-
     font-weight: bold;
     /* font-size: 40px; */
     border-width: 0px;
     /* border-color: green; */
     /* color: rgb(24, 143, 223); */
     /* text-shadow: 5px 2px 3px rgb(77, 177, 77); */
-    color: #fc5185; /*blue*/;
-
+    color: #fc5185;
+    /*blue*/
+    ;
 }
-
-
 
 .responsiveTitle {
     border: 0px solid red;
@@ -73,13 +75,13 @@ testClass {
     width: auto;
 } */
 
-
 .titleTable {
     border-collapse: collapse;
     border-spacing: 20;
     width: 100%;
     border: 0px solid #ddd;
-    color: #3fc1c9;/*blue;*/
+    color: #3fc1c9;
+    /*blue;*/
 }
 
 .titleTable #myPic {
@@ -101,5 +103,5 @@ hr {
     border-top-style: dotted;
     border-color: gray;
     border-width: 6px;
-    width: 6%;  
+    width: 6%;
 }
